<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/main_rel"
    tools:context=".Activity.IntroductionActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_txt"
        android:id="@+id/btn_skip"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:id="@+id/img"
        android:layout_marginTop="50dp"
        android:src="@drawable/img_sliderimg"
        android:adjustViewBounds="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_below="@+id/img"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:padding="5dp"
            android:id="@+id/p1"
            android:layout_marginEnd="3dp"
            android:layout_height="20dp"
            android:src="@drawable/img_selected"
            android:layout_marginRight="3dp"
            app:tint="@color/colorPrimary" />

        <ImageView
            android:layout_width="20dp"
            android:padding="5dp"
            android:id="@+id/p2"
            android:layout_marginEnd="3dp"
            android:layout_height="20dp"
            android:src="@drawable/img_notselected"
            android:layout_marginRight="3dp"
            app:tint="@color/colorPrimary"/>

        <ImageView
            android:layout_width="20dp"
            android:padding="5dp"
            android:id="@+id/p3"
            android:layout_height="20dp"
            android:src="@drawable/img_notselected"
            app:tint="@color/colorPrimary"/>
        <ImageView
            android:layout_width="20dp"
            android:padding="5dp"
            android:id="@+id/p4"
            android:layout_height="20dp"
            android:src="@drawable/img_notselected"
            app:tint="@color/colorPrimary"/>
        <ImageView
            android:layout_width="20dp"
            android:padding="5dp"
            android:id="@+id/p5"
            android:layout_height="20dp"
            android:src="@drawable/img_notselected"
            app:tint="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutonboard"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_tittle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_tittle2"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/slidetitle1"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_tittle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/slidetitle2"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txt_tittle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_continue"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/slidetitle3"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/txt_continue"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutonboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"


        android:layout_alignParentBottom="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="By continuing, you agree to our"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:visibility="gone"
            android:textSize="15sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"

            android:orientation="horizontal">


            <TextView
                android:id="@+id/txtTC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tc"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=" and "
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/txtPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/privacy"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="15sp"
                />
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:visibility="gone"

    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/layoutSignIn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/et_bordergray11">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="Sign In"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
<View
    android:layout_width="10dp"
    android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/layoutCreateAcc"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/btn_bg1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="Create Account"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
    </LinearLayout>


</RelativeLayout>
